--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.6",
+    "online-3d-viewer": "^0.18.0",
     "postprocessing": "^6.38.2",
     "tailwindcss": "^4.1.18",
     "three": "^0.182.0"
